# keys-server

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cog.toml  docker-compose.yaml  flake.nix  justfile  rustfmt.toml
.github/: codeowners
.github/actions/aws-login/: action.yml
.github/actions/install-rust/: action.yml
.github/actions/rust-cache-start/: action.yml
.github/actions/rust-cache-stop/: action.yml
.github/actions/update-version/: action.yml
.github/workflows/: cd.yml  ci-app.yml  ci-infra.yml  ci.yml  ci_terraform.yml  deploy-app.yml  deploy-infra.yml  dispatch_deploy.yaml  dispatch_publish.yaml  dispatch_validate.yaml  event_intake.yml  event_pr.yaml  event_project.yaml  event_push.yaml  event_release.yaml  intake.yml  nix.yml  plan-infra.yml  release.yml  sub-app-check.yml  sub-app-deploy.yml  sub-cd.yml  sub-ci.yml  sub-infra-apply.yml  sub-infra-check.yml  sub-infra-plan.yml  sub-publish-image.yml  sub-validate.yml
hosts/keys.walletconnect.com/: default.nix  hardware-configuration.nix  networking.nix
ops/: docker-compose.keyserver.yml  docker-compose.storage.yml
src/: config.rs  error.rs  initialize.sql  lib.rs  macros.rs  main.rs  state.rs
src/auth/: did.rs  mod.rs  public_key.rs
src/auth/cacao/: mod.rs  payload.rs  signature.rs  tests.rs
src/auth/jwt/: mod.rs  tests.rs
src/config/: mod.rs  server.rs
src/handler/: mod.rs
src/handlers/: exists_identity_key.rs  metrics.rs  mod.rs  register_identity_key.rs  register_proposal_encryption_key.rs  resolve_account.rs  unregister_account.rs  unregister_identity_key.rs
src/handlers/identity/: mod.rs  register.rs  resolve.rs  unregister.rs
src/handlers/invite/: mod.rs  register.rs  resolve.rs  unregister.rs
src/metrics/: mod.rs
src/models/: keys.rs
src/storage/: mod.rs
src/storage/memory/: mod.rs  tests.rs
src/storage/mongo/: config.rs  mod.rs  tests.rs
src/stores/: keys.rs  mod.rs
terraform/: .terraform.lock.hcl  README.md  backend.tf  context.tf  inputs.tf  legacy.tf  main.tf  provider.tf  providers.tf  res_application.tf  res_cloudwatch.tf  res_dns.tf  res_keystore.tf  res_monitoring.tf  res_network.tf  res_prometheus.tf  terraform.tf  variables.tf
terraform/cloudwatch/: README.md  alarms_docdb.tf  alarms_ecs.tf  main.tf  variables.tf
terraform/doc_db/: README.md  autoscaling.tf  main.tf  outputs.tf
terraform/docdb/: README.md  autoscaling.tf  kms.tf  main.tf  network.tf  outputs.tf  terraform.tf  variables.tf
terraform/ecs/: README.md  autoscaling.tf  cloudwatch.tf  cluster.tf  cluster_autoscaling.tf  cluster_iam.tf  dns.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tf  variables.tf
terraform/monitoring/: README.md  dashboard.jsonnet  dashboard.tf  data_sources.tf  main.tf  outputs.tf  terraform.tf  test.dashboard.jsonnet  variables.tf
terraform/monitoring/panels/: README.md  defaults.libsonnet  panels.libsonnet
terraform/monitoring/panels/app/: active_nlb_flows.libsonnet  app_cpu_memory.libsonnet  app_metric.libsonnet  cpu.libsonnet  healthy_hosts.libsonnet  nlb_target_resets.libsonnet
terraform/monitoring/panels/app/identity/: invalid_register_cacao.libsonnet  invalid_unregister_jwt.libsonnet  register.libsonnet  resolved.libsonnet  unregister.libsonnet
terraform/monitoring/panels/app/invite/: invalid_register_jwt.libsonnet  invalid_unregister_jwt.libsonnet  register.libsonnet  resolved.libsonnet  unregister.libsonnet
terraform/monitoring/panels/docdb/: available_memory.libsonnet  buffer_cache_hit_ratio.libsonnet  connections.libsonnet  cpu.libsonnet  low_mem_op_throttled.libsonnet  volume.libsonnet
terraform/monitoring/panels/ecs/: cpu.libsonnet  memory.libsonnet
terraform/monitoring/panels/lb/: error_4xx.libsonnet  error_5xx.libsonnet  requests.libsonnet
terraform/vars/: dev.tfvars  prod.tfvars  staging.tfvars
