[package]
name = "keyserver"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = "0.5.7"
axum-macros = "0.2.2"
envy = "0.4"
http = "0.2.8"
hyper = "0.14"
mongodb = { version = "2.3.0", features = ["tokio-runtime"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.44"
serde_piecewise_default = "0.2"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_matches = "1.5"
