[package]
name = "keyserver"
version = "1.1.0"
edition = "2021"
authors = [
    "Derek Rein <derek@walletconnect.com>",
    "Szymon Rząd <szymon@walletconnect.com>",
    "Xavier Basty-Kjellberg <xavier@walletconnect.com>",
    "Maciej Rak <raku@walletconnect.com>"
]
build = "build.rs"

[dependencies]
axum = "0.6.1"
axum-macros = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
hyper = "0.14"
http = "0.2.8"

# Database
wither = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74", features = ["bson-chrono-0_4"] }
wither_derive = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74" }

# Seralisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "8"

# Env Vars
envy = "0.4"

# Telemetry
opentelemetry = { version = "0.17", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = ["metrics", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.17.0"

# Misc
build-info = "0.0.29"
derive_more = "0.99"
bs58 = "0.4"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1"
validator = { version = "0.16", features = ["derive"] }
data-encoding = "2.3"
iri-string = "0.7.0"
time = "0.3.17"
k256 = "0.12.0"
sha3 = "0.10.6"
hex = "0.4.3"

[build-dependencies]
build-info-build = "0.0.29"
