[package]
name = "keyserver"
version = "1.14.5"
edition = "2021"
authors = [
    "Derek Rein <derek@walletconnect.com>",
    "Szymon Rząd <szymon@walletconnect.com>",
    "Xavier Basty-Kjellberg <xavier@walletconnect.com>",
    "Maciej Rak <raku@walletconnect.com>",
]
build = "build.rs"

[dependencies]
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.10.0", features = [
    "geoip",
    "geoblock",
] }
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.29.3", features = [
    "cacao",
] }
blockchain_api = { git = "https://github.com/WalletConnect/WalletConnectRust.git", tag = "v0.29.3" }

aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"

axum = "0.7.5"
axum-macros = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "auth",
    "compression-full",
    "trace",
    "cors",
    "request-id",
    "util",
] }
hyper = "1.2.0"
http = "1.0.0"

# Database
wither = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74", features = [
    "bson-chrono-0_4",
] }
wither_derive = { git = "https://github.com/WalletConnect/wither.git", rev = "6a70e74" }

# Seralisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT
jsonwebtoken = "8"

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.11"
opentelemetry-otlp = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18"
atty = "0.2"

# Misc
build-info = "0.0.29"
derive_more = "0.99"
bs58 = "0.4"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1"
validator = { version = "0.16", features = ["derive"] }
data-encoding = "2.3"
iri-string = "0.7.0"
time = "0.3.17"
k256 = "0.12.0"
sha3 = "0.10.6"
hex = "0.4.3"

[build-dependencies]
build-info-build = "0.0.29"

# [patch.'https://github.com/WalletConnect/WalletConnectRust.git']
# relay_rpc = { path = "../WalletConnectRust/relay_rpc" }
# relay_client = { path = "../WalletConnectRust/relay_client" }
# blockchain_api = { path = "../WalletConnectRust/blockchain_api" }
